feat: update proud projects

--- a/src/content/docs/about/me.mdx
+++ b/src/content/docs/about/me.mdx
@@ -14,6 +14,7 @@ sidebar:
 
 ## Proyectos de los que estoy más orgulloso
 
+- **Omnia**: Herramienta de análisis de posicionamiento de marcas en modelos LLMs. Colaboré con Daniel Espejo en las las primeras etapas de definición y desarrollo del producto. ([Web](https://www.useomnia.com/))
 - **Bot de vacunación COVID**: Bot de Twitter que desarrollé durante la pandemia de COVID-19 para informar sobre el estado de la vacunación en España ([X](https://twitter.com/CovidVacunaES) / [GitHub](https://github.com/juanoa/vacunas-bot))
 - **Wateralo**: Mientras estaba en la universidad, cofundé una marca de botellas de agua reutilizables con dos compañeros de clase. Nos encargamos de todo: compras, logística, página web, envíos, marketing y más. Fue una experiencia increíble.
 - **Share the gym**: Crea rutinas de gimnasio y compártelas con tus amigos ([GitHub](https://github.com/juanoa/share-the-gym) / [Web](https://share-the-gym.vercel.app/))
