feat: mark hexagonal as draft

--- a/src/content/docs/frontend/arquitectura-hexagonal.mdx
+++ b/src/content/docs/frontend/arquitectura-hexagonal.mdx
@@ -1,4 +1,5 @@
 ---
+draft: true
 title: Arquitectura hexagonal
 description: Cómo implementar una arquitectura limpia en un proyecto de frontend
 sidebar:
