feat: add active investment

--- a/src/content/docs/off-topic/dinero.mdx
+++ b/src/content/docs/off-topic/dinero.mdx
@@ -55,6 +55,7 @@ Ahora mismo mi cartera se divide de la siguiente forma:
 - **Fondos indexados**: Utilizando la plataforma [Finizens](https://app.finizens.com/inv/JUAN-39197) y con el plan de mayor riesgo que permite la plataforma (100% de renta variable y 0% de renta fija).
 - **Inmobiliario**: En este caso utilizando plataformas como WeCity _(Código referido para 50€: WECITY-90L61V)_ y [Urbanitae](https://urbanitae.com/es/invitado?access=U102861) para invertir en proyectos de crowdfunding y crowdlending.
 - **Criptomonedas**: Se llevan la parte más minoritaria de mi cartera, aunque últimamente estoy animándome a invertir algo más.
+- **Inversión activa**: Hace poco decidí abrir posición en Figma. No estoy muy a favor de la inversión activa, pero me parece una empresa con una proyección brutal.
 
 <InvestmentChart client:load />
 
