feat: add errar post

--- a/src/content/docs/opinion/index.mdx
+++ b/src/content/docs/opinion/index.mdx
@@ -15,4 +15,9 @@ Mis artículos de opinión sobre sociedad, tecnología e Internet.
     description="Y nos estamos empezando a dar cuenta"
     href="/opinion/redes-sociales/"
   />
+  <LinkCard
+    title="Errar"
+    description="Faltar a alguien, no cumplir con lo que se le debe"
+    href="/opinion/errar/"
+  />
 </CardGrid>
