feat: new color and unify about pages

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   tagline: Ingeniero de Software expuesto a un mundo complejo
   actions:
     - text: Sobre mi
-      link: /about/me
+      link: /about
     - text: Empieza por aquí
       link: /empieza-aqui/proposito
       variant: minimal
