fix: add images to redes-sociales post

--- a/src/content/docs/opinion/redes-sociales.mdx
+++ b/src/content/docs/opinion/redes-sociales.mdx
@@ -2,8 +2,20 @@
 title: Internet nos está jodiendo la vida
 description: Y nos estamos empezando a dar cuenta
 ---
+import Image from "@/components/ui/Image.astro"
+import Thumbnail from "./__assets__/redes-sociales-001.webp";
+import AllSeen from "./__assets__/redes-sociales-002.webp";
+import InstagramIsNotForFriends from "./__assets__/redes-sociales-003.webp";
+import HundredHoursEating from "./__assets__/redes-sociales-004.webp";
+import OnlyFans from "./__assets__/redes-sociales-005.webp";
+import OnlyFansStats from "./__assets__/redes-sociales-006.webp";
 
 Internet nos está jodiendo la vida. Aquella promesa de poder mantener el contacto con tus amigos desde la distancia, de poder ver a tu madre en videollamada si trabajabas fuera de casa, todo aquello fue el Caballo de Troya de algo mucho más peligroso. Fue el pretexto de una revolución que lejos de mantenernos más sociales, nos ha confinado más todavía.
+
+<Image
+  src={Thumbnail}
+  alt="Ilustración de muchas personas usando su teléfono móvil"
+/>
 
 ## Todo esto antes era campo
 
@@ -29,6 +41,13 @@ Cuando me acuerdo de estos pensamientos que tenía hace unos 10 años me siento 
 
 Antes, entrabas a Instagram, veías todo lo que habían publicado tus amigos y ya está. No había nada más para ver. Te podías ir a hacer otra cosa. Aun recuerdo le mensaje que mostraba la aplicación cuando ya lo habías visto todo:
 
+<Image
+  src={AllSeen}
+  alt="Mensaje de Instagram"
+  caption="Mensaje de Instagram"
+  width={500}
+/>
+
 Al principio yo salía de la aplicación. El contenido “sugerido” que me recomendaba no era lo suficientemente bueno como para quedarme. Es más, veía de forma descarada cómo estaban intentando que me quedase más tiempo dentro de la aplicación y claramente yo no iba a caer en eso.
 
 El scroll infinito ayudó a desarrollar una nueva forma de negocio que ya hemos normalizado, pero que por aquella época era algo nuevo: los influencers o creadores de contenido, como se hacen llamar ahora. Ahora que podías seguir navegando después de haber visto todo el contenido de tus amigos, había hueco para descubrir nuevas cuentas, nuevos personajes. Previo al infinite scrolling el “boca a boca” era la única forma de darte a conocer en las RRSS. Ahora había un espacio ilimitado, un tablón de anuncios sin fin, donde millones de adolescentes empezaban a introducirse como forma de “matar el tiempo”. Esto, claramente, explotó.
@@ -49,6 +68,12 @@ Como todo, esto se vendió de forma completamente diferente. Hablaron de la verd
 
 Pasamos de las redes sociales a las redes de consumo. Al buffet libre de Internet, pero no te tienes ni que levantar a por la comida, ellos te van a traer la que consideran que es la mejor para ti. Y desgraciadamente ahora son jodidamente buenos haciéndolo. Años y años recopilando información de cómo te comportas han dado sus frutos y ahora los algoritmos de recomendación de estas plataformas son realmente buenos. A la vista está, que son capaces de mantener embobados hasta a aquellos que nos mantenemos más escépticos con todo esto.
 
+<Image
+  src={InstagramIsNotForFriends}
+  alt="Artículo de Business Insider"
+  caption="Fuente: Business Insider"
+/>
+
 Al rededor de un 7% del contenido que se consume en redes sociales es contenido de “amigos”. Han dinamitado lo que ellos mismos inventaron hace unas décadas atrás. El botón Seguir y el de Me gusta ya no son importantes, ya no significan nada. Ahora lo único que importa es el tiempo que eres capaz de conseguir que alguien se quede viendo tu contenido. Que no se vaya de la aplicación.
 
 Lo que antes se incentivaba, para lo que fue creada la web, ahora se penaliza. Ni se te ocurra poner un link externo en Twitter (X) o no mandes a tus seguidores a una tienda que no sea la tienda de TikTok, porque penalizaremos tu contenido y lo mandaremos al “foso”. Si lo comparten con sus amigos a través de la plataforma: bien, pues así dentro de unos minutos tendremos dentro a otra persona viendo ese vídeo que le has pasado y con suerte, más.
@@ -61,6 +86,12 @@ Cuanto más contenido consumimos, nuestros circuitos de recompensa necesitan cos
 
 También buscamos información cada vez más estimulante. Ya no nos vale un video de alguien haciendo una receta, ahora necesitamos un video de alguien “comiendo 100 horas sin parar por Japón”. Lo gore y lo hardcore se viraliza, lo demás, parece que se penaliza.
 
+<Image
+  src={HundredHoursEating}
+  alt="Captura de video de YouTube cone el título: 100 horas sin parar de comer en Japón"
+  width={400}
+/>
+
 También pasa lo mismo con el porno, otra batalla silenciosa que parece que se está librando en un plano diferente, pero que es la misma mierda. Cada vez más contenido de violaciones, de incesto, porno hardcore, dominación, … Las fotos de la Interviú ya no nos sirven, ahora tenemos todos los videos que queramos sin tener que pasar por la vergüenza de tener que ir al quiosco. Ya incluso hemos dejado de tener miedo de meter nuestra tarjeta en sitios eróticos de pago. Mientras millones de jóvenes (principalmente chicos) se están jodiendo la vida con ideas absurdas e irreales de cómo funciona el sexo, miles de chicas se la están jodiendo subiendo videos a Internet por unos pocos euros.
 
 ## Sesgo de supervivencia
@@ -69,9 +100,23 @@ El sesgo de supervivencia nos dice que la gran mayoría de esas chicas se quedar
 
 Y ya no solo me refiero a plataformas como OnlyFans (las cuales están siendo blanqueadas a diestro y siniestro). El contenido erótico está llegando al resto de redes sociales. Aunque las políticas de estas plataformas no sex-friendly son firmes, es muy difícil moderar todos los contenidos que se publican cada hora.
 
+<Image
+  src={OnlyFans}
+  alt="OnlyFans como patrocinador en Moto2"
+  caption="OnlyFans como patrocinador en Moto2"
+  width={400}
+/>
+
 Y cuando todas estas creadoras de contenido se dan cuenta de que esto no era la gallina de los huevos de oro, es entonces cuando se dan cuenta de que dar “marcha atrás” es completamente imposible. Su contenido explícito está por todo Internet. Da igual si lo han borrado de la plataforma en la que lo publicaban, posiblemente el contenido haya sido distribuido también por centenares de foros sin su consentimiento. Muchos de estos foros tienen servidores localizados en países remotos cuyas políticas no tienen ningún tipo de compasión por estas chicas que entran en cuadro de depresión, que pierden el contacto con sus familias y que se ven completamente solas y estafadas por una promesa que nunca llegó.
 
-Y mientras estos creadores intentan adherirse al cada vez más famoso “derecho al olvido”, su contenido sigue rodando por ahí, disponible para cualquiera que tenga un dispositivo con conexión a Internet. Accesible incluso para aquellos más jóvenes.
+<Image
+  src={OnlyFansStats}
+  alt="El 10% de los creadores de OnlyFans ganan el 73% de los ingresos"
+  caption="Estadísticas de ingresos de OF"
+  width={600}
+/>
+
+Y mientras estos [creadores intentan adherirse](https://www.elespanol.com/reportajes/20250808/derecho-olvido-cecilia-sopena-profesora-ciclista-deja-onlyfans-nadie-deberia-llamarme-puta-digital/1003743878385_0.html) al cada vez más famoso “derecho al olvido”, su contenido sigue rodando por ahí, disponible para cualquiera que tenga un dispositivo con conexión a Internet. Accesible incluso para aquellos más jóvenes.
 
 ## A los que vienen
 
@@ -104,3 +149,7 @@ Cada día veo las consecuencias que todo esto ha generado en la sociedad y que y
 - Esperar más de una semana por un pedido nos parece impensable
 
 Por suerte, y aquí voy a acabar con una dosis de optimismo, tengo la sensación de que cada vez nos estamos dando más cuenta de esto. En mi afán por encontrar semejanzas con el pasado, esto se parece a cuando fumar era algo guay que era recetado incluso por médicos para tratar la ansiedad. Con el tiempo salen cada vez más estudios hablando de los problemas que Internet y las RRSS están generando sobre la población, sobre todo los más jóvenes. Cada vez estamos más cerca de ver cómo estas empresas acaban frente a las cuerdas, acabando de una vez por todas con una de las epidemias más grandes y silenciosas que hemos vivido en los últimos siglos.
+
+<div style={{display: "flex", justifyContent: "center", width: "100%", height: "315px"}}>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/jbWHZwD5rGQ?si=ZYG4ML3tH5VACb1H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
