feat: update main links

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
   actions:
     - text: Sobre mi
       link: /about
-    - text: Empieza por aquí
-      link: /empieza-aqui/proposito
+    - text: Artículos de opinión
+      link: /opinion
       variant: minimal
 ---
