--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -19,6 +19,7 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 Últimos artículos que he escrito y que os invito a leer:
 
 <CardGrid>
+  <LinkCard title="Links" description="Marcadores" href="/marcadores/links" />
   <LinkCard title="Internet nos está jodiendo la vida" description="Opinión" href="/opinion/redes-sociales" />
   <LinkCard title="Errar" description="Opinión" href="/opinion/errar" />
   <LinkCard title="Dinero" description="Off-topic" href="/off-topic/dinero" />
