feat: publish frontend handbook

--- a/src/content/docs/frontend/diseno.mdx
+++ b/src/content/docs/frontend/diseno.mdx
@@ -1,8 +1,8 @@
 ---
-draft: true
 title: Diseño
 description: Diseño como tercer pilar del Product Frontend Engineer
 sidebar:
+  label: 04. Diseño
   order: 4
 ---
 import Image from "@/components/ui/Image.astro"
