--- a/src/content/docs/frontend/ingenieria.mdx
+++ b/src/content/docs/frontend/ingenieria.mdx
@@ -1,8 +1,8 @@
 ---
-draft: true
 title: Ingeniería
 description: Ingeniería como primer pilar del Product Frontend Engineer
 sidebar:
+  label: 02. Ingeniería
   order: 2
 ---
 import Image from "@/components/ui/Image.astro"
