--- a/src/content/docs/frontend/introduccion.mdx
+++ b/src/content/docs/frontend/introduccion.mdx
@@ -1,8 +1,8 @@
 ---
-draft: true
 title: Introducción
 description: Principios y fundamentos del Product Frontend Engineer
 sidebar:
+  label: 01. Introducción
   order: 1
 ---
 import Image from "@/components/ui/Image.astro"
