--- a/src/content/docs/frontend/producto.mdx
+++ b/src/content/docs/frontend/producto.mdx
@@ -1,8 +1,8 @@
 ---
-draft: true
 title: Producto
 description: Producto como segundo pilar del Product Frontend Engineer
 sidebar:
+  label: 03. Producto
   order: 3
 ---
 import Image from "@/components/ui/Image.astro"
