--- a/src/content/docs/opinion/index.mdx
+++ b/src/content/docs/opinion/index.mdx
@@ -12,7 +12,7 @@ Mis artículos de opinión sobre sociedad, tecnología e Internet.
 <CardGrid>
   <LinkCard
     title="Internet nos está jodiendo la vida"
-    description="Y nos estamos empezando a dar cuenta"
+    description="Cómo la industria de la atención nos está robando nuestro recurso más valioso"
     href="/opinion/redes-sociales/"
   />
   <LinkCard
