feat: update home page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,16 +1,12 @@
 ---
 title: Juan Otálora
 description: Ingeniero de Software expuesto a un mundo complejo
-template: splash
+tableOfContents: false
+prev: false
+next: false
 hero:
   title: ¡Hola! Soy Juan
   tagline: Ingeniero de Software expuesto a un mundo complejo
-  actions:
-    - text: Sobre mi
-      link: /about
-    - text: Artículos de opinión
-      link: /opinion
-      variant: minimal
 ---
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
