feat: add pillars interactive

--- a/src/content/docs/frontend/diseno.mdx
+++ b/src/content/docs/frontend/diseno.mdx
@@ -6,14 +6,14 @@ sidebar:
   order: 4
 ---
 import Image from "@/components/ui/Image.astro"
-import DesignPillar from "./__assets__/diseno-001.png";
+import TechPillars from "@/components/frontend/tech-pillars.jsx"
 import UtilitiasDelectus from "./__assets__/diseno-002.png";
 import Interfaces from "./__assets__/diseno-003.png";
 import Microinteractions from "./__assets__/diseno-004.gif";
 
 En este capítulo vamos a profundizar un poco más en el diseño como tercer pilar fundamental en el rango de disciplinas que debería tener un buen Ingeniero Frontend. Somos los encargados de hacer la parte visible, de construir la interfaz a través de la cual el usuario se comunicará con el sistema. Se necesita de un gusto por lo exquisito y por la calidad para ser capaces de confeccionar auténticas maravillas que las personas amen usar.
 
-<Image src={DesignPillar} alt="Diseño como una de las patas del Product Frontend Engineer" />
+<TechPillars activePillar="design" client:load />
 
 ## Utilitas y delectus
 
