--- a/src/content/docs/frontend/ingenieria.mdx
+++ b/src/content/docs/frontend/ingenieria.mdx
@@ -6,12 +6,12 @@ sidebar:
   order: 2
 ---
 import Image from "@/components/ui/Image.astro"
-import TechPillar from "./__assets__/ingenieria-001.png";
+import TechPillars from "@/components/frontend/tech-pillars.jsx"
 import Mutations from "./__assets__/ingenieria-002.png";
 
 La ingeniería es la disciplina que da solución a problemas del mundo real. Como ingenieros de software, una de nuestras principales responsabilidades es la de construir productos que solventen dificultades, haciendo la vida de las personas más sencilla y agradable.
 
-<Image src={TechPillar} alt="Los tres pilares más importantes. Ingeniería resaltado." />
+<TechPillars activePillar="engineering" client:load />
 
 Vamos a ver algunos principios fundamentales para aumentar la calidad de lo que producimos a la par que reducimos los tiempos de entrega.
 
