--- a/src/content/docs/frontend/introduccion.mdx
+++ b/src/content/docs/frontend/introduccion.mdx
@@ -6,6 +6,7 @@ sidebar:
   order: 1
 ---
 import Image from "@/components/ui/Image.astro"
+import TechPillars from "@/components/frontend/tech-pillars.jsx"
 import ThreePillars from "./__assets__/introduccion-001.png";
 
 Antes de empezar, es importante que te familiarices con los pilares, con los cimientos, que rigen este _handbook_. Y es que mi objetivo no es que sea la mejor guía o la más completa que puedas encontrar. Mi objetivo es que si compartimos los mismos valores, seamos capaces de encontrar la mejor manera de construir productos digitales de calidad y que la gente realmente ame usar.
@@ -57,10 +58,7 @@ Si estos valores resuenan contigo es una buena señal, porque posiblemente el re
 
 Más allá del propósito y de los valores, hay un concepto clave y son los tres pilares que sostienen todo tu trabajo. Estos son **ingeniería, producto y diseño**. Mucha gente se intenta sostener solo en el primero, pero rápidamente acaban siendo prescindibles o sustituidos o pierden las ganas de seguir construyendo porque no entienden muy bien lo que están haciendo.
 
-<Image
-  src={ThreePillars}
-  alt="Tres pilares que representan las tres patas principales del buen ingeniero frontend"
-/>
+<TechPillars client:load />
 
 La aparición de producto y diseño como disciplinas a desarrollar no significa que perdamos de vista las habilidades técnicas. Estas siguen siendo las más importantes y las más valiosas que tenemos Las otras dos lo complementan y te diferencian del resto, convirtiéndote en un rol imprescindible gracias a tu versatilidad y tu posibilidad de conectar puntos entre esas tres áreas.
 
