feat: add utilitas vs delectus interactive component

--- a/src/content/docs/frontend/diseno.mdx
+++ b/src/content/docs/frontend/diseno.mdx
@@ -8,7 +8,7 @@ sidebar:
 import Image from "@/components/ui/Image.astro"
 import TechPillars from "@/components/frontend/tech-pillars.jsx"
 import Microinteractions from "@/components/frontend/microinteractions.jsx"
-import UtilitiasDelectus from "./__assets__/diseno-002.png";
+import UtilitasDelectus from "@/components/frontend/utilitas-delectus.jsx"
 import Interfaces from "./__assets__/diseno-003.png";
 
 En este capítulo vamos a profundizar un poco más en el diseño como tercer pilar fundamental en el rango de disciplinas que debería tener un buen Ingeniero Frontend. Somos los encargados de hacer la parte visible, de construir la interfaz a través de la cual el usuario se comunicará con el sistema. Se necesita de un gusto por lo exquisito y por la calidad para ser capaces de confeccionar auténticas maravillas que las personas amen usar.
@@ -23,11 +23,7 @@ Pese a la llegada del post-modernismo y otras corrientes que pedían la vuelta a
 
 Al diseñar hay una tensión constante entre dos conceptos muy importantes: la función y la emoción, **el _utilitas_ y el _delectus_**. Por ejemplo, Le Corbusier pintaba paredes de una misma habitación de diferentes colores para que la percepción del espacio fuera mayor, algo que horrorizaría a muchas personas. Todo por y para la función.
 
-<Image
-  src={UtilitiasDelectus}
-  alt="La solución correcta casi siempre suele estar en un lugar intermedio entre el utilitas y el delectus"
-  caption="La solución correcta casi siempre suele estar en un lugar intermedio entre el utilitas y el delectus"
-/>
+<UtilitasDelectus client:load />
 
 La maestría está en encontrar el sitio exacto entre estos dos conceptos. Es importante crear productos que funcionen y que solucionen un problema real de forma efectiva, pero sin olvidarse del deleite de la persona que lo usa. ¿Podría alguien sentir una conexión con un producto frío e inexpresivo?
 
