fix: correct typo in conclusion sidebar label

--- a/src/content/docs/frontend/conclusion.mdx
+++ b/src/content/docs/frontend/conclusion.mdx
@@ -2,7 +2,7 @@
 title: Conclusión
 description: Conclusiones finales y despedida
 sidebar:
-  label: 09. Conslución
+  label: 09. Conclusión
   order: 9
 ---
 
