feat: enhance about page with company logos for Inditex and PcComponentes

--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -3,6 +3,10 @@ title: Sobre mí
 description: Una breve historia sobre mí
 ---
 
+import CompanyLogo from "@/components/ui/CompanyLogo.astro"
+import InditexLogo from "./__assets__/inditex-logo.png"
+import PcComponentesLogo from "./__assets__/pccomponentes-logo.png"
+
 ¡Hola! Soy Juan y me dedico a la tecnología. Soy Ingeniero Informático de profesión y construyo productos digitales, actualmente para Inditex.
 
 Siempre supe que me quería dedicar a lo que me dedico. Me fue fácil elegir mis estudios y nunca tuve dudas de dónde quería llegar. Sin embargo, la programación no es algo que me emocione especialmente. Veo la programación, el código, como un medio para llegar a un fin y creo que los ingenieros tenemos un objetivo mucho más noble que simplemente desarrollar. Los ingenieros tenemos la complicada labor de ser los intermediarios entre la tecnología y la sociedad.
@@ -28,8 +32,8 @@ Otros side-projects pequeños que tengo publicados en Internet:
 
 ## Experiencia
 
-- **Inditex** (Oct. 2021 - Presente). [Inditex](https://www.inditex.com/) es un líder mundial en retail de moda conocido por su diverso portafolio de marcas, incluyendo [Zara](https://www.zara.com/). He ayudado a construir la herramienta de gestión de productos y catálogos para los e-commerce de la compañía.
-- **PcComponentes** (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) es un e-commerce español líder especializado en productos electrónicos y tecnológicos. Trabajo backend en la tienda online usando PHP y Symphony.
+- <CompanyLogo name="Inditex" logo={InditexLogo} /> (Oct. 2021 - Presente). [Inditex](https://www.inditex.com/) es un líder mundial en retail de moda conocido por su diverso portafolio de marcas, incluyendo [Zara](https://www.zara.com/). He ayudado a construir la herramienta de gestión de productos y catálogos para los e-commerce de la compañía.
+- <CompanyLogo name="PcComponentes" logo={PcComponentesLogo} /> (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) es un e-commerce español líder especializado en productos electrónicos y tecnológicos. Trabajo backend en la tienda online usando PHP y Symphony.
 
 ## Más sobre mi
 
