fix: adjust max width of centered blockquote in about page

--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -75,7 +75,7 @@ Algunos datos básicos:
 
 Creo que el trabajo es **más que ganar un salario**. Se trata de contribuir a la sociedad, ayudar a colectivos con sus problemas y a hacerlos crecer. También es una forma de hacernos crecer individualmente y sacar provecho a nuestro potencial. Esto no se trata de servir a un sistema, se trata de servirse a uno mismo. Como dice Rosalía, "oficio y maestría":
 
-<div style={{display: "flex", justifyContent: "center", width: "400px", margin: "50px auto"}}>
+<div style={{display: "flex", justifyContent: "center", maxWidth: "400px", margin: "50px auto"}}>
   <blockquote class="twitter-tweet"><p lang="es" dir="ltr">Oficio. <a href="https://t.co/WVI3SewycY">pic.twitter.com/WVI3SewycY</a></p>&mdash; José Luis Antúnez (@jlantunez) <a href="https://twitter.com/jlantunez/status/1740745121375863106?ref_src=twsrc%5Etfw">December 29, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
