refactor: replace CompanyLogo component with InlineImage in about page and remove unused CompanyLogo component

--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -3,9 +3,10 @@ title: Sobre mí
 description: Una breve historia sobre mí
 ---
 
-import CompanyLogo from "@/components/ui/CompanyLogo.astro"
+import InlineImage from "@/components/ui/InlineImage.astro"
 import InditexLogo from "./__assets__/inditex-logo.png"
 import PcComponentesLogo from "./__assets__/pccomponentes-logo.png"
+import CorunaLogo from "./__assets__/coruna.png"
 
 ¡Hola! Soy Juan y me dedico a la tecnología. Soy Ingeniero Informático de profesión y construyo productos digitales, actualmente para Inditex.
 
@@ -32,15 +33,15 @@ Otros side-projects pequeños que tengo publicados en Internet:
 
 ## Experiencia
 
-- <CompanyLogo name="Inditex" logo={InditexLogo} /> (Oct. 2021 - Presente). [Inditex](https://www.inditex.com/) es un líder mundial en retail de moda conocido por su diverso portafolio de marcas, incluyendo [Zara](https://www.zara.com/). He ayudado a construir la herramienta de gestión de productos y catálogos para los e-commerce de la compañía.
-- <CompanyLogo name="PcComponentes" logo={PcComponentesLogo} /> (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) es un e-commerce español líder especializado en productos electrónicos y tecnológicos. Trabajo backend en la tienda online usando PHP y Symphony.
+- <InlineImage name="Inditex" image={InditexLogo} /> (Oct. 2021 - Presente). [Inditex](https://www.inditex.com/) es un líder mundial en retail de moda conocido por su diverso portafolio de marcas, incluyendo [Zara](https://www.zara.com/). He ayudado a construir la herramienta de gestión de productos y catálogos para los e-commerce de la compañía.
+- <InlineImage name="PcComponentes" image={PcComponentesLogo} /> (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) es un e-commerce español líder especializado en productos electrónicos y tecnológicos. Trabajo backend en la tienda online usando PHP y Symphony.
 
 ## Más sobre mi
 
 Algunos datos básicos:
 
 - Nací el **25 de mayo de 1999**, en **Alicante** (España), pero me mudé a Murcia unos años después.
-- Después de estudiar Ingeniería Informática, fui aceptado en el programa de talentos de Inditex y me mudé a A Coruña (Galicia, España), **donde me siento como en casa**.
+- Después de estudiar Ingeniería Informática, fui aceptado en el programa de talentos de Inditex y me mudé a A Coruña <InlineImage image={CorunaLogo} /> (Galicia, España), **donde me siento como en casa**.
 - Mudarme a A Coruña me enseñó que **salir de mi zona de confort** da miedo, pero los resultados merecen la pena.
 - Durante los últimos años, me he vuelto muy activo. Escalo, corro y hago surf.
 - Desde que empecé a surfear, **el mar** se ha convertido en mi lugar favorito del mundo.
