feat: enhance about page with personal values and GitHub contributions image

--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -4,9 +4,11 @@ description: Una breve historia sobre mí
 ---
 
 import InlineImage from "@/components/ui/InlineImage.astro"
+import Image from "@/components/ui/Image.astro"
 import InditexLogo from "./__assets__/inditex-logo.png"
 import PcComponentesLogo from "./__assets__/pccomponentes-logo.png"
 import CorunaLogo from "./__assets__/coruna.png"
+import GitHubContributions from "./__assets__/github-contributions.png"
 
 ¡Hola! Soy Juan y me dedico a la tecnología. Soy Ingeniero Informático de profesión y construyo productos digitales, actualmente para Inditex.
 
@@ -51,12 +53,16 @@ Algunos datos básicos:
 
 ## Mis valores trabajando en tecnología
 
+Lo que realmente marca la diferencia son las personas, la cultura y la forma en la que trabajamos. Estos son los valores que intento aplicar cada día para construir con sentido.
+
 ### Lo que me motiva
 
 - **El producto es clave**. Necesito creer en el producto que estoy construyendo y en cómo puede afectar positivamente a la sociedad.
 - Un entorno **multidisciplinar**, donde, a pesar de que cada uno tenga sus propias fortalezas, podamos compartir nuestras opiniones en diferentes áreas como diseño o negocio.
 - Valoro cuando el equipo de ingeniería puede **interaccionar con usuarios y con el negocio** sin intermediarios.
 - Me encanta **arrancar proyectos desde cero**, aplicando el principio de Pareto para conseguir rápidamente el 80% de los resultados con el 20% del esfuerzo.
+
+<Image src={GitHubContributions} alt="Gráfico de calor de contribuciones en GitHub" caption="Soy un builder" />
 
 ### Lo que me decepciona
 
