feat: add action link to about page in index for improved navigation

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,6 +7,10 @@ next: false
 hero:
   title: ¡Hola! Soy Juan
   tagline: Ingeniero de Software expuesto a un mundo complejo
+  actions:
+    - text: Sobre mi
+      link: /about
+      icon: right-arrow
 ---
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
